Set background color of the app content container; Simplify retrieval of the root view of section items

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="io.github.luizgrp.sectionedrecyclerviewadapter.demo.HomeActivity"
-    tools:showIn="@layout/app_bar_home">
+    tools:showIn="@layout/app_bar_home"
+    android:background="@color/app_background_color">
 
     <FrameLayout
         android:id="@+id/fragment_container"
