--- a/app/src/main/res/layout/section_ex8_header.xml
+++ b/app/src/main/res/layout/section_ex8_header.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:paddingTop="5dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="5dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:paddingTop="5dp">
 
     <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
-        tools:text="Title test text"
+        android:layout_margin="15dp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        android:id="@+id/tvTitle" />
+        tools:text="Title test text" />
 
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:text="@string/add"
-        android:background="@drawable/selector_btn"/>
-</RelativeLayout>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:background="@drawable/selector_btn"
+            android:text="@string/add"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/btnClear"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/selector_btn"
+            android:text="@string/clear"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+</LinearLayout>
