Feat: Ability to use multiple Item ViewHolders/ViewTypes

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -38,6 +38,10 @@
                 android:id="@+id/nav_example8"
                 android:title="@string/nav_example8"
                 android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>
+            <item
+                android:id="@+id/nav_example9"
+                android:title="@string/nav_example9"
+                android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"/>
         </menu>
     </item>
 
