--- a/app/src/main/res/layout/section_ex3_failed.xml
+++ b/app/src/main/res/layout/section_ex3_failed.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="240dp"
     android:background="@drawable/selector_item"
-    android:clickable="true">
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:layout_width="wrap_content"
