--- a/app/src/main/res/layout/section_ex3_footer.xml
+++ b/app/src/main/res/layout/section_ex3_footer.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/rootView"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
     android:background="@drawable/selector_item"
-    android:clickable="true">
+    android:clickable="true"
+    android:focusable="true"
+    android:paddingBottom="15dp"
+    android:paddingTop="15dp">
 
     <TextView
+        android:id="@+id/tvSeeMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/see_more"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:id="@+id/tvSeeMore"/>
+        android:textStyle="bold"/>
 
 </RelativeLayout>
