--- a/app/src/main/res/layout/section_ex6_item.xml
+++ b/app/src/main/res/layout/section_ex6_item.xml
@@ -11,7 +11,8 @@
     card_view:cardUseCompatPadding="true"
     card_view:cardPreventCornerOverlap="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true">
+    android:clickable="true"
+    android:focusable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
