--- a/app/src/main/res/layout/section_ex8_header.xml
+++ b/app/src/main/res/layout/section_ex8_header.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/selector_btn"
             android:text="@string/clear"
             android:textColor="@color/white"
