Address lint issues

--- a/app/src/main/res/layout/section_ex5_header.xml
+++ b/app/src/main/res/layout/section_ex5_header.xml
@@ -32,5 +32,6 @@
         android:background="@drawable/selector_btn"
         android:text="@string/more"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        tools:ignore="RelativeOverlap" />
 </RelativeLayout>
