--- a/app/src/main/res/layout/section_ex1_item.xml
+++ b/app/src/main/res/layout/section_ex1_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
@@ -13,23 +12,23 @@
         android:id="@+id/imgItem"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:src="@drawable/ic_android_black_48dp"/>
+        android:layout_marginLeft="15dp"
+        android:contentDescription="@string/cd_android_icon"
+        android:src="@drawable/ic_android_black_48dp" />
 
     <TextView
         android:id="@+id/tvItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_toEndOf="@+id/imgItem"
         android:layout_toRightOf="@+id/imgItem"
-        tools:text="Item test text"/>
-
+        tools:text="Item test text" />
 
 </RelativeLayout>
