--- a/app/src/main/res/layout/section_ex3_failed.xml
+++ b/app/src/main/res/layout/section_ex3_failed.xml
@@ -14,7 +14,8 @@
         android:id="@+id/imageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_cloud_off_black_48dp"/>
+        android:src="@drawable/ic_cloud_off_black_48dp"
+        android:contentDescription="@string/cd_cloud_crossed" />
 
     <TextView
         android:layout_width="wrap_content"
