--- a/app/src/main/res/layout/section_ex4_header.xml
+++ b/app/src/main/res/layout/section_ex4_header.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:paddingBottom="5dp"
-    android:paddingTop="5dp">
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        tools:text="Title test text"/>
+        tools:text="Title test text"
+        tools:ignore="RelativeOverlap" />
 
     <ImageView
         android:id="@+id/imgArrow"
@@ -30,11 +30,12 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
-        android:src="@drawable/ic_keyboard_arrow_up_black_18dp"/>
+        android:contentDescription="@string/cd_arrow_icon"
+        android:src="@drawable/ic_keyboard_arrow_up_black_18dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"/>
+        android:background="@color/colorAccent" />
 </RelativeLayout>
