--- a/app/src/main/res/layout/section_ex5_item.xml
+++ b/app/src/main/res/layout/section_ex5_item.xml
@@ -32,7 +32,8 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_movie_black_48dp"
-                android:id="@+id/imgItem"/>
+                android:id="@+id/imgItem"
+                android:contentDescription="@string/cd_movie_icon" />
         </FrameLayout>
 
         <TextView
