Add overloaded methods for payloads

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -40,4 +40,9 @@
         android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"
         android:title="@string/nav_example8" />
 
+    <item
+        android:id="@+id/example9Fragment"
+        android:icon="@drawable/ic_keyboard_arrow_right_black_18dp"
+        android:title="@string/nav_example9" />
+
 </menu>
