--- a/app/src/main/res/layout/section_ex9_portfolio_header.xml
+++ b/app/src/main/res/layout/section_ex9_portfolio_header.xml
@@ -15,6 +15,8 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/tvHoldingsPriceTotal"
+            android:layout_alignRight="@+id/tvHoldingsPriceTotal"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
