--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,42 +37,42 @@
     </fragment>
     <fragment
         android:id="@+id/example1Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example1Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example1.Example1Fragment"
         android:label="@string/nav_example1"
         tools:layout="@layout/fragment_ex1" />
     <fragment
         android:id="@+id/example2Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example2Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example2.Example2Fragment"
         android:label="@string/nav_example2"
         tools:layout="@layout/fragment_ex2" />
     <fragment
         android:id="@+id/example3Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example3Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example3.Example3Fragment"
         android:label="@string/nav_example3"
         tools:layout="@layout/fragment_ex3" />
     <fragment
         android:id="@+id/example4Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example4Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example4.Example4Fragment"
         android:label="@string/nav_example4"
         tools:layout="@layout/fragment_ex4" />
     <fragment
         android:id="@+id/example5Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example5Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example5.Example5Fragment"
         android:label="@string/nav_example5"
         tools:layout="@layout/fragment_ex5" />
     <fragment
         android:id="@+id/example6Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example6Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example6.Example6Fragment"
         android:label="@string/nav_example6"
         tools:layout="@layout/fragment_ex6" />
     <fragment
         android:id="@+id/example7Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example7Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example7.Example7Fragment"
         android:label="@string/nav_example7"
         tools:layout="@layout/fragment_ex7" />
     <fragment
         android:id="@+id/example8Fragment"
-        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.Example8Fragment"
+        android:name="io.github.luizgrp.sectionedrecyclerviewadapter.demo.example8.Example8Fragment"
         android:label="@string/nav_example8"
         tools:layout="@layout/fragment_ex8" />
     <fragment
