Replace icons by vector files

--- a/app/src/main/res/layout/section_ex2_item.xml
+++ b/app/src/main/res/layout/section_ex2_item.xml
@@ -17,8 +17,8 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
-        android:contentDescription="@string/cd_android_icon"
-        android:src="@drawable/ic_android_black_48dp" />
+        android:contentDescription="@string/cd_avatar_icon"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvHeader"
